--- a/action.yml
+++ b/action.yml
@@ -10,7 +10,7 @@ runs:
     - uses: actions/setup-go@v3
       with:
         go-version: '>=1.17.0'
-    - run: go install -v github.com/aleksrutins/matrix
+    - run: go install -v github.com/aleksrutins/matrix@${{ inputs.version }}
       shell: bash
     - run: matrix
       shell: bash
