--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,7 +14,7 @@ jobs:
       - run: |
           npm install
       - run: |
-          npm run all
+          npm run build && npm run package
       - uses: ./
         with:
           config: matrix.toml
